--- a/hw6.Rmd
+++ b/hw6.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "DSApps 2022 @ TAU: Assignment 6"
+title: "DSApps 2023 @ TAU: Assignment 6"
 author: "Giora Simchoni"
 date: "`r Sys.Date()`"
 output: 
@@ -19,18 +19,18 @@ Welcome to Assignment 6 in R!
 Remember:
 
 * You can play with the assignment in Playground mode, but:
-* Only your private Github repository assigned to you by the course admin will be cloned and graded (Submission mode, see instructions [here](https://github.com/DSApps-2022/Class_Slides/blob/master/Apps_of_DS_HW.pdf))
+* Only your private Github repository assigned to you by the course admin will be cloned and graded (Submission mode, see instructions [here](https://github.com/DSApps-2023/Class_Slides/blob/master/Apps_of_DS_HW.pdf))
 * Like any other University assignment, your work should remain private
-* You need to `git clone` your private Github repository locally as explained [here](https://github.com/DSApps-2022/Class_Slides/blob/master/Apps_of_DS_HW.pdf)
+* You need to `git clone` your private Github repository locally as explained [here](https://github.com/DSApps-2023/Class_Slides/blob/master/Apps_of_DS_HW.pdf)
 * You need to uncomment the starter code inside the chunk, replace the `### YOUR CODE HERE ###`, run the chunk and see that you're getting the expected result
 * Pay attention to what you're asked to do and the required output
 * For example, using a *different* function than the one you were specifically asked to use, will decrease your score (unless you amaze me)
 * Your notebook should run smoothly from start to end if someone presses in the RStudio toolbar Run --> Restart R and Run All Chunks
 * When you're done knit the entire notebook into a html file, this is the file that would be graded
 * You can add other files but do not delete any files
-* Commit your work and push to your private Github repository as explained [here](https://github.com/DSApps-2022/Class_Slides/blob/master/Apps_of_DS_HW.pdf)
+* Commit your work and push to your private Github repository as explained [here](https://github.com/DSApps-2023/Class_Slides/blob/master/Apps_of_DS_HW.pdf)
 
-This assignemtnt is due: 22/5 23:59
+This assignment is due: TBD
 
 ### Packages
 
@@ -59,7 +59,7 @@ That's right. I have scraped [ebay](https://il.ebay.com/b/Womens-Heels/55793/bn_
 
 You will have 7 attempts at submitting the predicted price of the hidden shoes, and whoever reaches the lowest RMSE - wins!
 
-Be sure to visit our [Leaderboard](https://dsapps-2022.github.io/Class_Slides/leaderboard.html) to see the best scores.
+Be sure to visit our [Leaderboard](https://dsapps-2023.github.io/Class_Slides/leaderboard.html) to see the best scores.
 
 ### Basic Exploration
 
@@ -280,7 +280,7 @@ shoes_test %>%
   write_csv("model01.csv")
 ```
 
-Drop me a mail either by actually sending me a mail or opening an issue in your repo and assigning it to me, and wait to see your result on the [Leaderboard!](https://dsapps-2022.github.io/Class_Slides/leaderboard.html)
+Drop me a mail either by actually sending me a mail or opening an issue in your repo and assigning it to me, and wait to see your result on the [Leaderboard!](https://dsapps-2023.github.io/Class_Slides/leaderboard.html)
 
 **WARNING**: Be sure to name your models differently, otherwise your last result might run over your previous result, and you won't know which is which!
 
